syntax = "proto3";
package xion.dkim.v1;

import "google/api/annotations.proto";
import "xion/dkim/v1/genesis.proto";
import "xion/dkim/v1/state.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/burnt-labs/xion/x/dkim/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params queries all parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dkim/v1/params";
  }

  // DkimPubKey queries the DKIM public key for a given selector and domain.
  rpc DkimPubKey(QueryDkimPubKeyRequest) returns (QueryDkimPubKeyResponse) {
    option (google.api.http).get = "/dkim/v1/dkim_pubkey";
  }

  // DkimPubKeys queries the DKIM public keys for a given selectors and domains.
  rpc DkimPubKeys(QueryDkimPubKeysRequest) returns (QueryDkimPubKeysResponse) {
    option (google.api.http).get = "/dkim/v1/dkim_pubkeys";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1;
}

// QueryDkimPubKeyRequest is the request type for the Query/DkimPubKey RPC
// method.
message QueryDkimPubKeyRequest {
  string selector = 1;
  string domain = 2;
}

// QueryDkimPubKeyResponse is the response type for the Query/DkimPubKey RPC
// method.
message QueryDkimPubKeyResponse {
  DkimPubKey dkim_pub_key = 1;
}

// QueryDkimPubKeysRequest is the request type for the Query/DkimPubKeys RPC
// method. All fields are optional, and will filter down results.
message QueryDkimPubKeysRequest {
  string selector = 1;
  string domain = 2;
  bytes poseidon_hash = 3;
  cosmos.base.query.v1beta1.PageRequest pagination = 4;
}

// QueryDkimPubKeysResponse is the response type for the Query/DkimPubKeys RPC
// method.
message QueryDkimPubKeysResponse {
  repeated DkimPubKey dkim_pub_keys = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 3;
}